# meetball

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml
backend/meetball/: pyproject.toml
backend/meetball/config/: settings.py
backend/meetball/src/: manage.py
backend/meetball/src/config/: settings.py
git_hooks/: commit_msg.py
