[tool.poetry]
name = "meetball"
version = "0.1.0"
description = ""
authors = ["undergroundenemy616 <undergroundenemy616@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.3"
ruff = "^0.8.1"
mypy = "^1.13.0"
isort = "^5.13.2"
black = "^24.10.0"
autoflake = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autoflake]
remove-all-unused-imports = true
ignore-init-module-imports = true
expand-star-imports = true
remove-duplicate-keys = true

[tool.black]
line-length = 120
target-version = ['py311']
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.pyc
  |\.pyi
  |_build
  |buck-out
  |build
  |dist
  |venv
)
'''

[tool.isort]
line_length = 120
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
multi_line_output = 3
profile = "black"
src_paths = "."
lines_after_imports = 2


[tool.ruff]
line-length = 120
target-version = "py311"
fix = true
lint.select = [
    "F",   # pyflakes
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "C90", # mccabe
    "N",   # pep8-naming
    "C4",  # flake8-comprehensions
    "B",   # flake8-bugbear
    "BLE", # flake8-blind-except
    "T20", # flake8-print
    "Q",   # flake8-quotes
]
exclude = [
    "eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".tox",
    ".venv",
    ".pyc",
    ".pyi",
    "_build",
    "buck-out",
    "build",
    "dist",
    "migrations",
    "proto",
]

[tool.ruff.lint.mccabe]
max-complexity = 5


[tool.mypy]
explicit_package_bases = true
strict = true
show_error_codes = true
ignore_missing_imports = true
disable_error_code = ["var-annotated", "no-redef"]
exclude = '''
(
  \.eggs
  |\.git
  |\.hg
  |\.mypy_cache
  |\.nox
  |\.tox
  |\.venv
  |\.pyc
  |\.pyi
  |_build
  |buck-out
  |build
  |dist
  |venv
)
'''